2012-05-30  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20120530
	  Merge with NetBSD make, pick up
	  o compat.c: ignore empty command.

2012-05-24  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20120524
	* FILES: add bsd.after-import.mk:
	  A simple means of integrating bmake into a BSD build system.

2012-05-20  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20120520
	  Merge with NetBSD make, pick up
	  o increased limit for nested conditionals.
	
2012-05-18  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20120518
	  Merge with NetBSD make, pick up
	  o use _exit(2) in signal hanlder
	  o Don't use the [dir] cache when building nodes that might have
	    changed since the last exec.
	  o Avoid nested extern declaration warnings.

2012-04-27  Simon J. Gerraty  <sjg@bad.crufty.net>

	* meta.c (fgetLine): avoid %z - not portable.
	* parse.c: Since we moved include of sys/mman.h
	  and def's of MAP_COPY etc. we got dups from a merge.

2012-04-24  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20120420
	  Merge with NetBSD make, pick up
	  o restore duplicate supression in .MAKE.MAKEFILES
	    runtime saving can be significant.
	  o Var_Subst() uses Buf_DestroyCompact() to reduce memory
	    consumption up to 20%. 

2012-04-20  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20120420
          Merge with NetBSD make, pick up
	  o remove duplicate supression in .MAKE.MAKEFILES
	  o improved dir cache behavior
	  o gmake'ish export command
	
2012-03-25  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20120325
	  Merge with NetBSD make, pick up
	  o fix parsing of :[#] in conditionals.

2012-02-10  Simon J. Gerraty  <sjg@bad.crufty.net>
